# Rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebook/: document.ipynb  rag.ipynb
Notebook/data/my_db/: chroma.sqlite3
Notebook/my_db/: chroma.sqlite3
data/vector_store/: chroma.sqlite3
